--- a/app/views/sign_up.html
+++ b/app/views/sign_up.html
@@ -8,40 +8,39 @@
       </div>
     </div>
     <div class="form-group">
+      <label class="control-label col-sm-2" for="username">Username:</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="username" placeholder="Enter username" ng-model="user.username" required >
+      </div>
+    </div>
+    <div class="form-group">
       <label class="control-label col-sm-2" for="pwd">Password:</label>
       <div class="col-sm-10">
-        <input type="password" class="form-control" id="pwd" placeholder="Enter password"  ng-model="user.password" required >
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="user.password" required >
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="pwd">Retype:</label>
       <div class="col-sm-10">
-        <input type="password" class="form-control" id="pwd" placeholder="Retype password" required >
+        <input type="password" class="form-control" id="pwd" placeholder="Retype password" ng-model="retyped_password" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="email">First name:</label>
+      <label class="control-label col-sm-2" for="firstName">First name:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="email" placeholder="First name"  ng-model="user.firstName" required >
+        <input type="text" class="form-control" id="firstName" placeholder="First name" ng-model="user.firstName" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Last name:</label>
+      <label class="control-label col-sm-2" for="surname">Last name:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="email" placeholder="Last name"  ng-model="user.surname" required >
+        <input type="text" class="form-control" id="surname" placeholder="Last name" ng-model="user.surname" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Birthdate:</label>
+      <label class="control-label col-sm-2" for="birthdate">Birthdate:</label>
       <div class="col-sm-10">
-        <input type="date" class="form-control" id="date" placeholder="Birthdate" required >
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <div class="checkbox">
-          <label><input type="checkbox"> Remember me</label>
-        </div>
+        <input type="date" class="form-control" id="date" placeholder="Birthdate" ng-model="user.birthdate" required >
       </div>
     </div>
     <div class="form-group">
@@ -50,4 +49,5 @@
       </div>
     </div>
   </form>
+  <p style="color:red;">{{postMessage}}</p>
 </div>
