--- a/app/views/sign_up.html
+++ b/app/views/sign_up.html
@@ -1,5 +1,5 @@
 <div class="container sign-up-container">
-  <h2 style="text-align:center;">SIGN UP FORM</h2>
+  <h2 style="text-align:center;"><img src="images/sign-up.png"> SIGN UP FORM</h2>
   <form class="form-horizontal" role="form" ng-submit="submit()">
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Email:</label>
