--- a/app/views/sign_up.html
+++ b/app/views/sign_up.html
@@ -22,7 +22,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="pwd">Retype:</label>
       <div class="col-sm-10">
-        <input type="password" class="form-control" id="pwd" placeholder="Retype password" ng-model="retyped_password" required >
+        <input type="password" class="form-control" id="ret_pwd" placeholder="Retype password" ng-model="retyped_password" required >
       </div>
     </div>
     <div class="form-group">
@@ -40,7 +40,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="birthdate">Birthdate:</label>
       <div class="col-sm-10">
-        <input type="date" class="form-control" id="date" placeholder="Birthdate" ng-model="user.birthdate" required >
+        <input type="date" class="form-control" id="birthdate" placeholder="Birthdate" ng-model="user.birthdate" required >
       </div>
     </div>
     <div class="form-group">
