--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,15 +2,9 @@
   <h2 style="text-align:center;"><img src="images/sign-up.png"> LOGIN FORM</h2>
   <form class="form-horizontal" role="form" ng-submit="submit_login()">
     <div class="form-group">
-      <label class="control-label col-sm-2" for="login_email">Email:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="login_email" placeholder="Enter email" ng-model="user.email" required >
-      </div>
-    </div>
-    <div class="form-group">
       <label class="control-label col-sm-2" for="login_username">Username:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="login_username" placeholder="Enter username" ng-model="user.username" required >
+        <input type="text" class="form-control" id="login_username" placeholder="Enter username or email" ng-model="user.username" required >
       </div>
     </div>
     <div class="form-group">
