Login functionality changed to use Basic Authentication

--- a/app/views/add_expense.html
+++ b/app/views/add_expense.html
@@ -10,7 +10,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="date">Category:</label>
       <div class="col-sm-5">
-        <select type="date" class="form-control" id="category" placeholder="Category" ng-model="expense.category" required>
+        <select type="date" class="form-control" id="category" placeholder="Category" ng-model="expense.category.name" required>
           <option ng-repeat="category in categories" value="{{category}}">{{category}}</option>
         </select>
       </div>
