[upd] Expense history added, folders for controllers added.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,9 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h2>Welocme to My Money Tracker<span sg-show="username">, <span style="color:#ff3333;">{{username}}</span></span>!</h2>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <img src="images/logo.svg" alt="I'm Yeoman"><br>
+    <br>
+    Always a pleasure offering you the best and easy to use expense manager.
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
@@ -20,7 +21,7 @@
 
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p>
-  
+
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p>
 </div>
