--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,27 +1,29 @@
 <div class="jumbotron">
-  <h2>Welocme to My Money Tracker<span sg-show="username">, <span style="color:#ff3333;">{{username}}</span></span>!</h2>
+  <h2>Welcome to <span style="font-style: italic;">My Money Tracker</span>
+    <span sg-show="{{hello_username}}" style="color:#ff3333;">{{hello_username}}</span>!</h2>
   <p class="lead">
     <img src="images/logo.svg" alt="I'm Yeoman"><br>
     <br>
     Always a pleasure offering you the best and easy to use expense manager.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <p><a class="btn btn-lg btn-success" ng-href="#/">Control expenses!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <br><br>
+  <h3 style="font-weight: bold;">What <span style="font-style: italic;">MyMoneyTracker</span> does ?</h3>
+  <div>
+      <ul style="text-align:left;font-size:18px;">
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> helps you to keep your budget under control.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> can calculate how much you've spent monthly,
+          grouping your expenses by categories or by date.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> helps you establish monthly tresholds for expenses
+          grouped by different categories.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> is free and easy to use.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> offers the possibility to manage your expenses by
+          creating an account that can be used to login into the application everywhere you are, without installing any other
+          application.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> offers a secure connection based on HTTPS protocol.</li>
+        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> encrypts any information for a user, and only the
+            user that have created the information has acces to it.</li>
+      </ul>
+    </div>
+  </div>
 </div>
