--- a/app/views/user/login.html
+++ b/app/views/user/login.html
@@ -5,7 +5,7 @@
   <div class="alert alert-danger" ng-show="error">
     There was a problem logging in. Please try again.
   </div>
-  <h2 style="text-align:center;"><img src="images/sign-up.png"> LOGIN FORM</h2>
+  <h2 style="text-align:center;"><img src="images/login.png"> LOGIN FORM</h2>
   <form class="form-horizontal" role="form" ng-submit="controller.login()">
     <div class="form-group">
       <label class="control-label col-sm-2" for="login_username">Username:</label>
