--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h2>Welcome to <span style="font-style: italic;">My Money Tracker</span>
-    <span sg-show="{{hello_username}}" style="color:#ff3333;">{{hello_username}}</span>!</h2>
+    <span sg-show="{{username}}">, <span style="color:#ff3333;">{{username}}</span></span>!</h2>
   <p class="lead">
     <img src="images/logo.svg" alt="I'm Yeoman"><br>
     <br>
