--- a/app/views/expense/add_expense.html
+++ b/app/views/expense/add_expense.html
@@ -11,7 +11,7 @@
       <label class="control-label col-sm-2" for="date">Category:</label>
       <div class="col-sm-5">
         <select type="date" class="form-control" id="category" placeholder="Category" ng-model="expense.category.name" required>
-          <option ng-repeat="category in categories" value="{{category}}">{{category}}</option>
+          <option ng-repeat="category in categories" value="{{category}}" required>{{category}}</option>
         </select>
       </div>
       <div class="col-sm-3">
@@ -30,13 +30,14 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="amount">Amount:</label>
       <div class="col-sm-10">
-        <input type="number" class="form-control" id="amount" placeholder="Expense amount" ng-model="expense.amount" required >
+        <input type="number" step="any" class="form-control" id="amount" placeholder="Expense amount" ng-model="expense.amount" required >
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="date">Creation date:</label>
       <div class="col-sm-10">
-        <input type="date" class="form-control" id="date" placeholder="date" ng-model="expense.creationDate" required >
+        <input type="datetime-local" value="{{current_date_value}}" class="form-control" id="date" placeholder="date"
+               ng-model="expense.creationDate" required >
       </div>
     </div>
     <div class="form-group">
@@ -45,5 +46,4 @@
       </div>
     </div>
   </form>
-  <p style="color:red;">{{postMessage}}</p>
 </div>
