--- a/app/views/income/add_income.html
+++ b/app/views/income/add_income.html
@@ -8,20 +8,6 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="date">Category:</label>
-      <div class="col-sm-5">
-        <select type="date" class="form-control" id="category" placeholder="Category" ng-model="income.category" required>
-          <option ng-repeat="category in categories" value="{{category}}">{{category}}</option>
-        </select>
-      </div>
-      <div class="col-sm-3">
-        <input type="text" class="form-control" placeholder="New category" ng-model="newCategory">
-      </div>
-      <div class="col-sm-2">
-        <input type="button" class="form-control" placeholder="Add new category" value="Add" ng-click="addCategory()">
-      </div>
-    </div>
-    <div class="form-group">
       <label class="control-label col-sm-2" for="description">Description:</label>
       <div class="col-sm-10">
         <textarea type="text" rows="5"  class="form-control" id="description" placeholder="Description ..." ng-model="income.description"/>
@@ -30,13 +16,14 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="amount">Amount:</label>
       <div class="col-sm-10">
-        <input type="number" class="form-control" id="amount" placeholder="Income amount" ng-model="income.amount" required >
+        <input type="number" step="any" class="form-control" id="amount" placeholder="Income amount" ng-model="income.amount" required >
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="date">Creation date:</label>
       <div class="col-sm-10">
-        <input type="date" class="form-control" id="date" placeholder="date" ng-model="income.creationDate" required >
+        <input type="datetime-local" value="{{current_date_value}}" class="form-control" id="date" placeholder="date"
+               ng-model="income.creationDate" required >
       </div>
     </div>
     <div class="form-group">
@@ -45,5 +32,4 @@
       </div>
     </div>
   </form>
-  <p style="color:red;">{{postMessage}}</p>
 </div>
