--- a/app/views/user/sign_up.html
+++ b/app/views/user/sign_up.html
@@ -2,25 +2,25 @@
   <h2 style="text-align:center;"><img src="images/sign-up.png"> SIGN UP FORM</h2>
   <form class="form-horizontal" role="form" ng-submit="submit()">
     <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Email:</label>
+      <label class="control-label col-sm-2" for="email">Email<span style="color:#ff3333;">*</span> :</label>
       <div class="col-sm-10">
         <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="user.email" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="username">Username:</label>
+      <label class="control-label col-sm-2" for="username">Username<span style="color:#ff3333;">*</span> :</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="username" placeholder="Enter username" ng-model="user.username" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="pwd">Password:</label>
+      <label class="control-label col-sm-2" for="pwd">Password<span style="color:#ff3333;">*</span> :</label>
       <div class="col-sm-10">
         <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="user.password" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="pwd">Retype:</label>
+      <label class="control-label col-sm-2" for="pwd">Retype<span style="color:#ff3333;">*</span> :</label>
       <div class="col-sm-10">
         <input type="password" class="form-control" id="ret_pwd" placeholder="Retype password" ng-model="retyped_password" required >
       </div>
@@ -28,19 +28,25 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="firstName">First name:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="firstName" placeholder="First name" ng-model="user.firstName" required >
+        <input type="text" class="form-control" id="firstName" placeholder="First name" ng-model="user.firstName">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="surname">Last name:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="surname" placeholder="Last name" ng-model="user.surname" required >
+        <input type="text" class="form-control" id="surname" placeholder="Last name" ng-model="user.surname">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="birthdate">Birthdate:</label>
       <div class="col-sm-10">
-        <input type="date" class="form-control" id="birthdate" placeholder="Birthdate" ng-model="user.birthdate" required >
+        <input type="date" class="form-control" id="birthdate" placeholder="Birthdate" ng-model="user.birthdate" >
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="birthdate"> </label>
+      <div class="col-sm-10">
+        <span style="color:#ff3333;">* Required field</span>
       </div>
     </div>
     <div class="form-group">
@@ -49,5 +55,4 @@
       </div>
     </div>
   </form>
-  <p style="color:red;">{{postMessage}}</p>
 </div>
