--- a/app/views/expense/expenses_history.html
+++ b/app/views/expense/expenses_history.html
@@ -17,14 +17,17 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="expense in expenses" bs-tooltip title="{{expense.description}}" >
+    <tr ng-repeat="expense in expenses | orderBy:'creationDate':true" bs-tooltip title="{{expense.description}}" >
       <td>{{ expense.name }}</td>
       <td>{{ expense.amount }}</td>
       <td>{{ expense.category.name }}</td>
       <td>{{ expense.creationDate | date:'medium' }}</td>
-      <td><span class="glyphicon glyphicon-pencil" bs-tooltip title="Edit expense!" ng-click="editExpense($index)"></span>
+      <td>
+        <span class="glyphicon glyphicon-pencil" bs-tooltip title="Edit expense!"
+                ng-click="editExpense(expense)"></span>
         <span class="glyphicon glyphicon-trash" style="float:right;" bs-tooltip title="Delete expense!"
-              ng-click="deleteExpense($index)"></span></td>
+              ng-click="deleteExpense($index)"></span>
+      </td>
     </tr>
     <tr ng-show="expenses.length == 0">
       <td style="font-style:italic;" colspan="5">No expense have been found!</td>
