Edit income added.

--- a/app/views/expense/expenses_history.html
+++ b/app/views/expense/expenses_history.html
@@ -26,7 +26,7 @@
         <span class="glyphicon glyphicon-pencil" bs-tooltip title="Edit expense!"
                 ng-click="editExpense(expense)"></span>
         <span class="glyphicon glyphicon-trash" style="float:right;" bs-tooltip title="Delete expense!"
-              ng-click="deleteExpense($index)"></span>
+              ng-click="deleteExpense(expense)"></span>
       </td>
     </tr>
     <tr ng-show="expenses.length == 0">
