--- a/app/views/income/incomes_chart.html
+++ b/app/views/income/incomes_chart.html
@@ -1,5 +1,5 @@
 <div class="container sign-up-container">
-  <h2 style="text-align:center;"><img src="images/expenses_chart.svg"> INCOMES CHART</h2>
+  <h2 style="text-align:center;"><img src="images/incomes_chart.svg"> INCOMES CHART</h2>
   <br>
   <div class="form-group">
     <label class="control-label col-sm-3">Graphic type:</label>
